libnvidia-container (1.5.0-1) UNRELEASED; urgency=medium

  * Promote 1.5.0~rc.2 to 1.5.0-1
  * [BUILD] Allow REVISION to be specified as make variable
  * [BUILD] Only copy package files to dist folder

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Tue, 31 Aug 2021 09:00:00 +0200

libnvidia-container (1.5.0~rc.2-1) experimental; urgency=medium

  * Remove --fabric-device option to include nvlink and nvswitch devices
  * Build: Read TAG (e.g. rc.2) from NVC_VERSION in makefile

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Tue, 17 Aug 2021 14:40:14 +0200

libnvidia-container (1.5.0~rc.1-1) experimental; urgency=medium

  * Add --fabric-device option to include nvlink and nvswitch devices
  * Add support for GSP firmware
  * WSL - Mount binaries from driver store

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Fri, 13 Aug 2021 04:34:26 -0700

libnvidia-container (1.4.0-1) UNRELEASED; urgency=medium

  * Mount all of /proc/.../nvidia/capabilities with --mig-{config, monitor}
  * Add fabricmanager as a valid IPC to inject into a container
  * Added libnvidia-nscq.so as an optional injected utility lib
  * Add Jenkinsfile for internal CI
  * Invoke docker make file separately
  * WSL - Add full NVML support for WSL in the container library

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Sat, 24 Apr 2021 04:34:26 -0700

libnvidia-container (1.3.3-1) UNRELEASED; urgency=medium

  * Promote 1.3.3~rc.2 to 1.3.3-1

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Fri, 05 Feb 2021 02:13:49 -0700

libnvidia-container (1.3.3~rc.2-1) experimental; urgency=medium

  * Remove path_join() with already chrooted directory

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Wed, 03 Feb 2021 13:36:45 -0700

libnvidia-container (1.3.3~rc.1-1) experimental; urgency=medium

  * Pre-create MIG related nvcaps at startup
  * Add more logging around device node creation with --load-kmods

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Wed, 03 Feb 2021 03:34:23 -0700
